--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,12 @@ dependencies {
     implementation 'com.jakewharton:butterknife:10.2.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.0'
 
-    //recyclerView
-    implementation 'androidx.recyclerview:recyclerview:1.0.0'
-
+    //recyclerView, cardView
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'com.android.support:cardview-v7:28.0.0'
+    //retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.9.1'
+    implementation 'com.google.code.gson:gson:2.8.0'
 }
